# devklean

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  build_backend.py  devclean.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml  test.yml
docs/superpowers/specs/: 2026-06-28-release-ecosystem-design.md
examples/: config.toml  scan.output.json  scan.schema.json
src/devclean/: __init__.py  __main__.py  _version.py  cli.py  deleter.py  formatting.py  models.py  scanner.py  tui.py
src/devclean/cli/: __init__.py  dispatcher.py  main.py  parser.py
src/devclean/cli/commands/: __init__.py  clean.py  common.py  scan.py
src/devclean/config/: __init__.py  defaults.py  manager.py  models.py  paths.py  targets.py
src/devclean/output/: __init__.py  base.py  json.py  scan_payload.py  sorting.py  text.py
src/devclean/scanner/: __init__.py  filters.py  scanner.py
src/devklean/: __init__.py  __main__.py  _version.py  deleter.py  formatting.py  logging_setup.py  models.py  tui.py
src/devklean/cli/: __init__.py  confirmation.py  dispatcher.py  main.py  parser.py
src/devklean/cli/commands/: __init__.py  analyze.py  clean.py  common.py  doctor.py  explain.py  history.py  restore.py  scan.py
src/devklean/config/: __init__.py  defaults.py  manager.py  models.py  paths.py  targets.py
src/devklean/deletion/: __init__.py  base.py  compression.py  history.py  integrity.py  interfaces.py  metadata.py  paths.py  restore.py  safety.py  service.py  trash.py
src/devklean/output/: __init__.py  base.py  console.py  history_payload.py  json.py  progress.py  scan_payload.py  sorting.py  text.py  theme.py
src/devklean/scanner/: __init__.py  filters.py  scanner.py
src/devklean/signatures/: __init__.py  analysis.py  health.py  registry.py  staleness.py  structural.py
tests/: benchmark_scanner.py  conftest.py  test_analyze_command.py  test_clean_flow.py  test_cli_parser.py  test_compression.py  test_config.py  test_config_precedence.py  test_confirmation.py  test_console.py  test_deletion.py  test_doctor.py  test_dry_run.py  test_explain_command.py  test_formatting.py  test_history.py  test_integration.py  test_integrity.py  test_json_output.py  test_logging.py  test_main_signal.py  test_models.py  test_output_sorting.py  test_packaging.py  test_perf_scan.py  test_progress.py  test_restore.py  test_safety.py  test_scan_json_cli.py  test_scan_permissions.py  test_scan_settings.py  test_scanner.py  test_signatures_health.py  test_signatures_registry.py  test_signatures_staleness.py  test_signatures_structural.py  test_text_renderer.py  test_windows_guard.py
web/: README.md  index.html  metadata.json  package-lock.json  package.json
web/src/: App.tsx  data.ts  index.css  types.ts
web/src/components/: EcosystemBar.tsx  FeaturesGrid.tsx  Footer.tsx  HeroSection.tsx  InteractiveDemo.tsx  Navbar.tsx  SafetyNet.tsx  SavingsCalculator.tsx  StorySection.tsx
