[build-system]
requires = []
build-backend = "build_backend"
backend-path = ["."]

[project]
name = "devklean"
dynamic = ["version"]
description = "Clean up common development artifacts to reclaim disk space"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.8"
license = { text = "Proprietary" }
keywords = ["cleanup", "cli", "disk-space", "development"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Filesystems",
    "Topic :: Utilities",
]
dependencies = [
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
devklean = "devklean.cli.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
filterwarnings = [
    "error",
]

[tool.coverage.run]
source = ["devklean"]
branch = true
omit = [
    "*/tests/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
